변경: 제목을 'MATRIX: Mask Track Alignment for Interaction-Aware Video Generation'으로 업데이트

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <source src="images/moving viral.mp4" type="video/mp4">
                     </video>
                     <div class="title-text-block">
-                        <h1 class="title"><span class="gradient-text">VIRAL</span>: Visual Representation Alignment<span class="title-break"></span> for Multimodal Large Language Models</h1>
+                        <h1 class="title"><span class="gradient-text">MATRIX</span>: Mask Track Alignment<span class="title-break"></span> for Interaction-Aware Video Generation</h1>
                         <h1 class="subtitle">arXiv 2025</h1>
                     </div>
                 </div>
