메타 태그 및 저자 정보를 'MATRIX: Mask Track Alignment for Interaction-Aware Video Generation'으로 업데이트

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta
-        content="VIRAL: Visual Representation Alignment for Multimodal Large Language Models"
+        content="MATRIX: Mask Track Alignment for Interaction-Aware Video Generation"
         name="description" />
     <meta
-        content="VIRAL: Visual Representation Alignment for Multimodal Large Language Models"
+        content="MATRIX: Mask Track Alignment for Interaction-Aware Video Generation"
         property="og:title" />
     <meta
-        content="VIRAL: Visual Representation Alignment for Multimodal Large Language Models"
+        content="MATRIX: Mask Track Alignment for Interaction-Aware Video Generation"
         property="og:description" />
     <meta
-        content="VIRAL: Visual Representation Alignment for Multimodal Large Language Models"
+        content="MATRIX: Mask Track Alignment for Interaction-Aware Video Generation"
         property="twitter:title" />
     <meta
-        content="VIRAL: Visual Representation Alignment for Multimodal Large Language Models"
+        content="MATRIX: Mask Track Alignment for Interaction-Aware Video Generation"
         property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
@@ -105,78 +105,49 @@
             <div class="base-row author-row">
                 <div class="base-col author-col">
                     <a href= "https://yoon-heez.github.io/" target ="_blank" class="author-text">
-                        Heeji Yoon<sup>1*</sup>
+                        Siyoon Jin<sup>1*</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://crepejung00.github.io/" target="_blank" class="author-text">
-                        Jaewoo Jung<sup>1*</sup>
+                        Seongchan Kim<sup>1*</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://junwankimm.github.io/" target="_blank" class="author-text">
-                        Junwan Kim<sup>2*</sup>
+                        Jaeho Lee<sup>1*</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://hyungyu-choi.github.io/" target="_blank" class="author-text">
-                        Hyungyu Choi<sup>3</sup>
+                        Dahyun Chung<sup>2</sup>
                     </a>
                 </div>
             </div>
             <div class="base-row author-row">
                 <div class="base-col author-col">
                     <a href="https://hsshin98.github.io/" target="_blank" class="author-text">
-                        Heeseong Shin<sup>1</sup>
+                        Hyunwook Choi<sup>2</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://sites.google.com/view/sangbeomlim/home" target="_blank" class="author-text">
-                        Sangbeom Lim<sup>4</sup>
+                        Jiyoung Kim<sup>1</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://hg010303.github.io/" target="_blank" class="author-text">
-                        Honggyu An<sup>1</sup>
+                        Jisu Nam<sup>1</sup>
                     </a>
                 </div>
                 <div class="base-col author-col">
                     <a href="https://kchyun.github.io/" target="_blank" class="author-text">
-                        Chaehyun Kim<sup>1</sup>
-                    </a>
-                </div>
-                <div class="base-col author-col">
-                    <a href="https://onground-korea.github.io/" target="_blank" class="author-text">
-                        Jisang Han<sup>1</sup>
-                    </a>
-                </div>
-            </div>
-            <div class="base-row author-row">
-                <div class="base-col author-col">
-                    <a href="https://utl.korea.ac.kr/" target="_blank" class="author-text">
-                        Donghyun Kim<sup>4</sup>
-                    </a>
-                </div>
-                <div class="base-col author-col">
-                    <a href="https://pailab.cau.ac.kr/" target="_blank" class="author-text">
-                        Chanho Eom<sup>3</sup>
-                    </a>
-                </div>
-                <div class="base-col author-col">
-                    <a href="https://sunghwanhong.github.io/" target="_blank" class="author-text">
-                        Sunghwan Hong<sup>5</sup>
-                    </a>
-                </div>
-                <div class="base-col author-col">
-                    <a href="https://cvlab.kaist.ac.kr/" target="_blank" class="author-text">
                         Seungryong Kim<sup>1</sup>
                     </a>
                 </div>
-            </div>
-
             <div class="base-row author-row">
                 <div class="base-col author-col affiliations">
-                    <sup>1</sup>KAIST AI &nbsp;&nbsp; <sup>2</sup>NYU &nbsp;&nbsp; <sup>3</sup>Chung-Ang University &nbsp;&nbsp; <sup>4</sup>Korea University &nbsp;&nbsp; <sup>5</sup>ETH Zurich 
+                    <sup>1</sup>KAIST AI &nbsp;&nbsp; <sup>2</sup>Korea University
                     <br>
                     <sup>*</sup>Co-first authors
                 </div>
