--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <i class="fa fas fa-file-text main-icon" style="font-size: 60px"></i>
                         <strong class="link-labels-text">Paper</strong>
                     </a></div>
-                <div class="base-col icon-col"><a href='https://github.com/cvlab-kaist/VIRAL.git' class="link-block">
+                <div class="base-col icon-col"><a href='https://github.com/cvlab-kaist/MATRX.git' class="link-block">
                         <i class="fa fa-github main-icon" style="font-size: 60px"></i>
                         <strong class="link-labels-text">Code</strong>
                     </a></div>
