Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>MATRIX: Mask Track Alignment for Interaction-Aware Video Generation</title>
 
     <!-- Favicon references -->
-    <link rel="icon" type="image/png" href="./images/viral_robot.png">
-    <link rel="apple-touch-icon" href="./images/viral_robot.png">
+    <link rel="icon" type="image/png" href="./matrix_images/logo.png">
+    <link rel="apple-touch-icon" href="./matrix_images/logo.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta
@@ -188,18 +188,18 @@
 
             <div class="image-container">
                     <div class="image-content">
-                        <img src="images/teaser.png" class="img large-image" alt="VIRAL teaser">
+                        <img src="matrix_images/teaser.png" class="img large-image" alt="VIRAL teaser">
                     </div>
 
                     <!-- <p class="image-caption">We propose <strong>VIsual Representation ALignment (VIRAL)</strong> for multi-modal large language models (MLLMs), which introduces an auxiliary regularization objective on visual features to prevent MLLMs from discarding fine-grained visual attributes during training. VIRAL consistently produces more accurate visually grounded responses and yields substantial improvements over standard visual instruction tuning baselines when employing diverse vision towers, including CLIP and SigLIPv2.</p> -->
             </div>
             <div>
                 <p>
-                    <img class="paragraph-image" src="images/virabot_head.png" alt="VIRAL robot" />
+                    <img class="paragraph-image" src="matrix_images/head.png" alt="VIRAL robot" />
                     VIRAL introduces an auxiliary regularization objective on the visual pathway to prevent MLLMs from discarding detailed attributes during training. 
                 </p>
                 <p>
-                    <img class="paragraph-image" src="images/virabot_head.png" alt="VIRAL robot" />
+                    <img class="paragraph-image" src="matrix_images/head.png" alt="VIRAL robot" />
                     VIRAL, when trained with DINOv2 as the vision foundation model (VFM), consistently produces more accurate visually grounded responses and achieves substantial improvements over standard baselines across diverse vision encoders, including CLIP and SigLIPv2!
                 </p>
             </div>
