Update MATRIX website with manual edits

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="container">
             <!-- Contents: TL;DR -->
             <div class="tldr">
-                <b>TL;DR</b>: MATRIX introduces a lightweight LoRA-based regularization that aligns the key interaction-dominant layers of Video Diffusion Transformers with instance mask tracks using two losses — Semantic Grounding Alignment (SGA) and Semantic Propagation Alignment (SPA) — to greatly improve multi-instance interaction fidelity and temporal consistency. It comes with MATRIX-11K, a large-scale dataset of 11K videos with interaction-aware captions and masks, and InterGenEval, a new evaluation protocol (KISA, SGI, SPI, IF) for measuring interaction awareness in video generation.
+                <b>TL;DR</b>: MATRIX introduces a lightweight LoRA-based regularization that aligns the key interaction-dominant layers of Video Diffusion Transformers with multi-instance mask tracks using two losses — Semantic Grounding Alignment (SGA) and Semantic Propagation Alignment (SPA) — to greatly improve multi-instance interaction fidelity and temporal consistency.
             </div>
             <!-- Contents: Overview -->
             <div id="overview" class="base-row section">
